# teme

BST/: CMakeLists.txt  main.c  op.h  operations.c
BST_ph/: CMakeLists.txt  main.c
DLL/: CMakeLists.txt  main.c  op.h  operations.c
Dijkstra/: CMakeLists.txt  main.c
Graph_Matrix_BFS/: CMakeLists.txt  graph.c  graph.h  main.c  queue.c  queue.h
LL/: CMakeLists.txt  main.c  op.h  operations.c
List_to_matrix/: CMakeLists.txt  main.c
Majority/src/: InputOutput.java  Main.java  isMajority.java
Merge_Sort/: CMakeLists.txt  main.c
Queen/: CMakeLists.txt  main.c
SLL_HASH/: CMakeLists.txt  main.c  op.h  operation.c
Tree/: CMakeLists.txt  main.c  op.h  operations.c
TreeHeight/: CMakeLists.txt  main.c
TreeTraversal/: CMakeLists.txt  main.c
XOR_LINKED/: CMakeLists.txt  main.c
dvd/: CMakeLists.txt  main.c
hash_table2/: CMakeLists.txt  hash.c  hash.h  main.c
little_big_endian/: CMakeLists.txt  input.txt  main.c
matrix_to_list/: CMakeLists.txt  main.c
new_hash_table/: CMakeLists.txt  main.c
p1/: CMakeLists.txt  main.c
p2/: CMakeLists.txt  main.c
prob1/: CMakeLists.txt  main.c
prob2/: CMakeLists.txt  main.c
queue_imp/: CMakeLists.txt  main.c  queue.c  queue.h
queue_numbers/: CMakeLists.txt  header.h  main.c  operations.c
resources_1/: CMakeLists.txt  library.c  library.h
stack_imp/: CMakeLists.txt  main.c  st4ck.c  st4ck.h
